Send SignupRequest to ion